--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,3 +4,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+}
+
+.pagination a {
+  color: #BFFFC3;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+}
