--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,17 +5,11 @@
   justify-content: space-between;
 }
 
-.pagination {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 48px;
+.links {
+  text-align: center;
+  flex-grow: 1;
 }
 
-.pagination a {
-  color: #BFFFC3;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 150%;
+.links a {
+  margin: 0 8px;
 }
