--- a/src/components/Aside/aside.module.css
+++ b/src/components/Aside/aside.module.css
@@ -4,3 +4,35 @@
   padding: 40px 16px;
   height: 100%;
 }
+.items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+
+.items li {
+  text-align: center;
+  cursor: pointer;
+}
+
+.items p {
+  color: #888;
+  font-size: 22px;
+  line-height: 150%;
+}
+
+.items button {
+  background: transparent;
+  border: 1px solid #81FE88;
+  border-radius: 8px;
+  padding: 12px 16px;
+  color: #81FE88;
+  font-size: 22px;
+  line-height: 150%;
+  cursor: pointer;
+}
